# santa-unchained

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: backend.yml
commons/css/: base.css  index.css  wishlist.css
fixtures/: accounts.customuser.json
requirements/: base.txt  dev.txt
santa_unchained/: urls.py  wsgi.py
santa_unchained/accounts/: admin.py  apps.py  constants.py  forms.py  serializers.py  urls.py
santa_unchained/accounts/tests/: test_models.py
santa_unchained/settings/: base.py  local.py
santa_unchained/templates/: base.html  index.html
santa_unchained/templates/admin/: change_list_with_map.html
santa_unchained/templates/wishes/: wish_list_form.html  wishlist_detail.html  wishlist_success.html
santa_unchained/tests/: test_models.py  test_views.py
santa_unchained/utils/: mixins.py
wishes/: apps.py
